--- a/correctionindex.html
+++ b/correctionindex.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pomme</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/correctionindex.css">
         <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     </head>
     <body>
@@ -25,6 +25,9 @@
                     </ul>
                 </nav>
             </header>
+            <footer>
+                <p>Site a tester et utiliser !!!</p>
+            </footer>
         </div>
     </body>
 </html>
