--- a/index.html
+++ b/index.html
@@ -20,18 +20,28 @@
             <a href="1">Etape 5</a>
         </nav>
         <section>
-            <div class="block">
-                <img src="image/bg_page.gif" alt="couleur design en bord de page">
-            </div>
-            <div>
-                <div class="petite">
-                    <img src="image/little_apple.gif" alt="Petite pomme"><H2>Titre</H2>
+                <div>
+                    <img src="image/bg_page.gif" alt="couleur design en bord de page">
                 </div>
-                <hr>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, magnam repellendus. Exercitationem aut minima sed voluptatem voluptates. Magnam, iste impedit.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero dolorem quo voluptatem? Pariatur quo eum molestias odio repudiandae rerum necessitatibus, voluptas sit nulla odit possimus veritatis accusantium impedit reprehenderit atque dolorum at reiciendis, nobis velit voluptates quis, deleniti praesentium nesciunt? Tempora illum aliquid est explicabo quaerat praesentium autem quas perspiciatis.</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio fugiat repellat repellendus dolore eius? Libero, ratione repellat, voluptatem unde magnam animi, veniam iste voluptates sit similique ad laborum aut consequuntur sequi. Voluptatibus adipisci explicabo nostrum quia nisi! Blanditiis inventore, sequi eos deserunt magni illum asperiores fugiat ea aspernatur, unde ratione.</p>
-            </div>
+                <div>
+                    <main>
+                        <div class="pomme">
+                            <img src="image/little_apple.gif" alt="Petite pomme"><h2>Titre</h2>
+                            <hr>
+                        </div>
+                        <p>Lorem ipsum dolor <mark>sit amet, consectetur adipisicing elit, sed do eiusmod tempor</mark> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+                        <p>Lorem ipsum dolor <mark>sit amet, consectetur adipisicing elit, sed do eiusmod tempor</mark> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+            
+                        <h3>Sous-titre</h3>
+                        <hr>
+                        <p>Lorem ipsum dolor <mark>sit amet, consectetur adipisicing elit, sed do eiusmod tempor</mark> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+                        <p>Lorem ipsum dolor <mark>sit amet, consectetur adipisicing elit, sed do eiusmod tempor</mark> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+                    </main>
+                </div>
         </section>
         <footer>
                 <p>Site a tester et utiliser !!!</p>
