--- a/correction2index.html
+++ b/correction2index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pomme</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/correction2index.css">
         <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     </head>
     <body>
